@@ -1,3 +1,6 @@
+3637.	[bug]		'allow-query-on' was checking the source address
+			rather than the destination address. [RT #34590]
+
 3636.	[bug]		Automatic empty zones now behave better with
 			forward only "zones" beneath them. [RT #34583]
 
